added new tests for mobilluck + refactoring of old one

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /FrameworkTask/MoyoFramework/obj/Debug
+/FrameworkTask/MoyoFramework/bin/Debug
+/FrameworkTask/packages
+/FrameworkTask/.vs
